<resources>
    <string name="app_name">ServiceFusionRealmDemo</string>
    <string name="action_settings">Settings</string>

    <string name="action_add_person">Add Person</string>
    <string name="action_add_disco">Add Disco</string>

    <!-- disco -->
    <string name="add_disco">Add Disco</string>
    <string name="input_name_of_disco">Disco\'s name</string>
    <string name="name">name</string>
    <string name="pre_fill"></string>

    <!-- people-->
    <string name="add_person">Add Person</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="dob">Birthday : </string>
    <string name="zipcode">Zipcode : </string>


    <string name="hint_name">Name</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_zipcode">Zipcode</string>
    <string name="add">Add</string>

    <!-- dialog-->
    <string name="ok">Ok</string>ь
    <string name="cancel">Cancel</string>

    <!-- titles-->
    <string name="discos">Discos</string>
    <string name="people">People</string>


</resources>
